# gdd-maker

./: .gitignore  CHECKPOINT.md  CLAUDE.md  DESKTOP_BUILD.md  LICENSE  README.md  app.jsx  brief.jsx  build.js  bundle.jsx  chat.jsx  command-palette.jsx  concept.jsx  consistency-check.js  data.js  diagram.jsx  doc-export.jsx  export-adapters.js  export-formats.js  gemini-adapter.js  genres.js  index.html  package.json  quality-gate.js  serve.bat  slide-splitter.js  slides.jsx  stats.js  storage.js  styles.css  usage.js  validators.js
.bkit/audit/: 2026-05-26.jsonl
.bkit/runtime/: error-log.json  first-run-seen.json  hook-reachability.json  otel-env.json  session-ctx-fp.json
.bkit/state/: pdca-status.json  session-history.json
.github/workflows/: deploy.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
test/: validators.test.js
